--- a/index.html
+++ b/index.html
@@ -26,42 +26,36 @@
             </ul>
         </nav>
     </aside>
-    <main class="main">
-        <div class="background">
-            <div class="container">
-                <div class="main-first-block">
-                    <h1>Lorem ipsum dolor sit amet consectetur 
-                        adipisicing elit. Nisi esse quae voluptatibus
-                    </h1>
-                </div>
-            </div>
+    <section class="section"> 
+        <div class="container">
+            <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci ad consectetur</h1>
         </div>
-        <div class="main-second-block">
-            <div class="container">
-                <div class="flex-block">
-                    <div class="left-block">
-                        <span class="welcome">Welcome</span>
-                            <p class="left-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                Veritatis veniam amet, officiis iusto, ex error inventore magnam 
-                                officia quaerat necessitatibus praesentium sapiente mollitia animi 
-                                iste est consequatur nobis voluptates et. Lorem, ipsum dolor sit amet
-                                consectetur adipisicing elit. Quibusdam enim quos ullam similique autem, 
-                                deserunt deleniti ipsam atque, nostrum iste natus eligendi repellendus! Ad, 
-                                suscipit consequatur. Cum quos autem odit?
-                            </p>
-                    </div>
-                    <div class="right-block">
-                        <span class="right-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Hic esse aspernatur, ex ratione aliquam earum atque dignissimos nam. 
-                            Consequuntur amet, dolorum doloremque esse rerum laborum. 
-                            Voluptatem totam quam in mollitia.
-                        </span>
-                    </div>
+    </section>
+    <div class="wrapper">
+            <main class="main">
+                <div class="main-tittle">
+                    <span class="welcome">Welcome</span>
                 </div>
+                <div class="main-text">
+                    <span class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Nam reiciendis odio illo nulla, distinctio enim quis animi, 
+                        eligendi neque quibusdam perspiciatis voluptate, similique dolorem 
+                        suscipit architecto laborum unde hic aspernatur?consectetur adipisicing elit. 
+                        Nam reiciendis odio illo nulla, distinctio enim quis animi, 
+                        eligendi neque quibusdam perspiciatis voluptate, similique dolorem 
+                        suscipit architecto laborum unde hic aspernatur?
+                    </span>
+                </div>
+            </main>
+            <div class="sidebar">
+                <span class="sidebar-text"> 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Exercitationem, delectus fugiat expedita illo id quibusdam sint, 
+                    provident nesciunt eaque blanditiis maxime dolore velit repellat 
+                </span>
             </div>
-        </div>
-    </main>
+    </div>
     <footer class="footer">
         <div class="container">
             <p class="footer-text">Copyright &copy; 2023, My Website</p>
